first look of kartk.html

--- a/kartk/kartk.html
+++ b/kartk/kartk.html
@@ -15,20 +15,64 @@
 			<nav>
 				<ul>
 					<li><a href="#Home">Home</a></li>
-					<li><a href="#Skills">Skills</a></li>
-					<li><a href="#Resume">Resume</a></li>
-					<li><a href="#Portfolio">Portfolio</a></li>
-					<li><a href="#ContactMe">Contact Me</a></li>
+					<li style="float:right; margin-right:50px; "><a href="#Skills">Skills</a></li>
+					<li style="float:right"><a href="#Resume">Resume</a></li>
+					<li style="float:right"><a href="#Portfolio">Portfolio</a></li>
+					<li style="float:right"><a href="#ContactMe">Contact Me</a></li>
 				</ul>
 			</nav>
 			</div>
 
 		</header>
 		<section>
-			<img src="DSC02433.jpg" alt="kk.jpg" style="width:200px;height:200px;">
-
-			<div>
-				
+			<img src="DSC02433.jpg" alt="kk.jpg">
+		
+			<div class="a">
+				<h1>About Me</h1>
+				<p>Hi! I am Karthik.</p>
+				<p>I Design delightful interface solutions.</p>
+				<p>I Research, Document, Prototype, Test, Iterate, Design and Deliver.</p>
+				<p>I Create Interactive Protypes with HTML, CSS, and JavaScript.</p>
+			</div>
+			<div class="b">
+				<h1>UX Designing</h1>
+				<p>
+					User Experience Designer </br>
+					with a passion for designing</br>
+					beautiful and functional user </br>
+					experiences. Minimilist who</br>
+					believe that less is more.</br>
+				</p>
+			</div>
+			<div class="b">
+				<h1>UX Developing</h1>
+				<p>
+					Front End Developer</br>
+					who focuses on writing clean,</br>
+					elegant and efficient code. </br>
+					Love HTML, CSS, JavaScript,</br>
+					Bootstrap and a touch of jQuery.</br>
+				</p>
+			</div>
+			<div class="b">
+				<h1>Photography</h1>
+				<p>
+					I see God's beauty throgh the</br>
+					lens of my camera. When</br>
+					I capture that perfect moment, </br>
+					everything is beautiful! Love</br>
+					acapturing beautiful moments.</br>
+				</p>
+			</div>
+			<div class="b">
+				<h1>Image/ Video Editing</h1>
+				<p>
+					Proficient in Graphic Designing </br>
+					and Logo Designing with a flair</br>
+					for creativity and a good eye for </br>
+					colors. And good at video editing</br>
+					and composing visual effects</br>
+				</p>
 			</div>
 		</section>
 		<footer>
@@ -37,7 +81,7 @@
   					<li><a href="#PrivacyPolicy">Privacy Policy</a></li>
   					<li><a href="#VisitorAgreement">Visitor Agreement</a></li>
   					<li><a href="#FollowUs">Follow Us</a></li>
-  					<li><a href="#kartk.css">Career</a></li>
+  					<li style="float:right; margin-right:50px;"><a href="#kartk.css">Career</a></li>
 				</ul>
 			</nav>	
 		</footer>
