styling with bootstrap

--- a/kartk/kartk.html
+++ b/kartk/kartk.html
@@ -2,23 +2,32 @@
 <html>
 <head>
 	<title></title>
-	<link  href="kartk.css" rel="stylesheet"/>
+	<link  href="kartk.css" type="text/css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Latest compiled and minified CSS -->
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
+
+	<!-- jQuery library -->
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+
+	<!-- Latest compiled JavaScript -->
+	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 </head>
 <body>
+	<div class="container">
+		
 	<article>
 			
 		<header>
 
 			<div>
-			<h1>K &lt art &gt K</h1>
 			<nav>
 				<ul>
 					<li><a href="#Home">Home</a></li>
-					<li style="float:right; margin-right:50px; "><a href="#Skills">Skills</a></li>
-					<li style="float:right"><a href="#Resume">Resume</a></li>
-					<li style="float:right"><a href="#Portfolio">Portfolio</a></li>
-					<li style="float:right"><a href="#ContactMe">Contact Me</a></li>
+					<li><a href="#Skills">Skills</a></li>
+					<li><a href="#Resume">Resume</a></li>
+					<li><a href="#Portfolio">Portfolio</a></li>
+					<li><a href="#ContactMe">Contact Me</a></li>
 				</ul>
 			</nav>
 			</div>
@@ -68,12 +77,15 @@
 				<h1>Image/ Video Editing</h1>
 				<p>
 					Proficient in Graphic Designing </br>
-					and Logo Designing with a flair</br>
+					and Logo Des<<ul>
+						<li><a href="bootstrap.html">bootstrap</a></li>
+					</ul>igning with a flair</br>
 					for creativity and a good eye for </br>
 					colors. And good at video editing</br>
 					and composing visual effects</br>
 				</p>
 			</div>
+	
 		</section>
 		<footer>
 			<nav>
@@ -81,11 +93,12 @@
   					<li><a href="#PrivacyPolicy">Privacy Policy</a></li>
   					<li><a href="#VisitorAgreement">Visitor Agreement</a></li>
   					<li><a href="#FollowUs">Follow Us</a></li>
-  					<li style="float:right; margin-right:50px;"><a href="#kartk.css">Career</a></li>
+  					<li><a href="#kartk.css">Career</a></li>
 				</ul>
 			</nav>	
 		</footer>
 			
 	</article>
+	</div>
 </body>
 </html>
