--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -14,10 +14,10 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <ul class="nav navbar-nav">
-          <li><a href="#">Karthik Komakula</a></li>
+        <ul class="ul1 nav navbar-nav">
+          <li><a id="a1" href="index.html">Karthik Komakula</a></li>
         </ul>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#kkk">
+        <button id="button1" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#kkk">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -33,34 +33,47 @@
       </div>
     </div>
   </nav>
-  <div class="container" id="img1">
-    <img src="DSC_0056.jpg" alt="Cinque Terre" width="250" height="250">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-md-4">
+        <center><img id="img1" class="img-responsive" src="DSC_0056.jpg" alt="Cinque Terre"></center>
+      </div>
+      <div id="div2" class="col-xs-12 col-md-8">
+        <h1 style="color: #24c4d7"><i>About Me</i></h1>
+        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
   </div>
-  <div class="p1">
-    <h1><i>About Me</i></h1>
-    <p class="p2" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="div1 col-md-6">
+        <h1 style="color: #000000"><i>About Me</i></h1>
+        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="div1 col-md-6">
+        <h1 style="color: #000000"><i>About Me</i></h1>
+        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
   </div>
-  <div class="p3">
-    <h1 style="color: #000000"><i>About Me</i></h1>
-    <p class="p4" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-  <div class="p3">
-    <h1 style="color: #000000"><i>About Me</i></h1>
-    <p class="p4" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-  <div class="p5">
-    <h1 style="color: #000000"><i>About Me</i></h1>
-    <p class="p6" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-  <div class="p5">
-    <h1 style="color: #000000"><i>About Me</i></h1>
-    <p class="p6" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="div1 col-md-6">
+        <h1 style="color: #000000"><i>About Me</i></h1>
+        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div id="bottom1" class="div1 col-md-6">
+        <h1 style="color: #000000"><i>About Me</i></h1>
+        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
   </div>
   <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container-fluid">
       <div class="navbar-footer">
-        <ul class="nav navbar-nav">
+        <ul class="ul1 nav navbar-nav">
           <li><a href="#"> &#169; 2016 KARTHIK. All Rights Reserved. </a></li>
+        </ul>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -68,9 +81,7 @@
         </button>
       </div> 
       <div class="collapse navbar-collapse" id="myNavbar">
-
-
-      <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
           <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
           <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
@@ -79,7 +90,6 @@
           <li><a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
           <li><a href="#"><i class="fa fa-flickr" aria-hidden="true"></i></a></li>
         </ul>
-        
       </div> 
     </div>
   </nav>
