--- a/bootstrap/portfolio.html
+++ b/bootstrap/portfolio.html
@@ -9,125 +9,96 @@
   <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-  .carousel-inner > .item > img,
-  .carousel-inner > .item > a > img {
-      width: 40%;
-      margin: auto;
-  }
-  #myCarousel{
-  	margin-top: 60px;
-  }
-	#portimg{
-		margin-top: 20px;
-	margin-bottom: 70px;
-}
-  </style>
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <ul class="nav navbar-nav">
-          <li><a href="#">Karthik Komakula</a></li>
-        </ul>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#kkk">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div class="collapse navbar-collapse" id="kkk">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Resume</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contact Me</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-<div class="container">
-  <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="DSC_0056.jpg" alt="Chania" width="100" height="100">
-      </div>
-
-      <div class="item">
-        <img src="DSC_0056.jpg" alt="Chania" width="100" height="100">
-      </div>
-    
-      <div class="item">
-        <img src="DSC_0056.jpg" alt="Flower" width="100" height="100">
-      </div>
-
-      <div class="item">
-        <img src="DSC_0056.jpg" alt="Flower" width="100" height="100">
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
-<div id="portimg">
-
-<div class="container" id="img1">
-    <img src="DSC_0056.jpg" alt="Cinque Terre" width="250" height="250">
-  </div>
-  <div class="p1">
-    <h1><i>About Me</i></h1>
-    <p class="p2" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-
-</div>
-
-<nav class="navbar navbar-inverse navbar-fixed-bottom">
-    <div class="container-fluid">
-      <div class="navbar-footer">
-        <ul class="nav navbar-nav">
-          <li><a href="#"> &#169; 2016 KARTHIK. All Rights Reserved. </a></li>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div> 
-      <div class="collapse navbar-collapse" id="myNavbar">
-
-
-      <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-flickr" aria-hidden="true"></i></a></li>
-        </ul>
-        
-      </div> 
-    </div>
-  </nav>
-
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	    <div class="container-fluid">
+	      <div class="navbar-header">
+	        <ul class="ul1 nav navbar-nav">
+	          <li><a href="index.html">Karthik Komakula</a></li>
+	        </ul>
+	        <button type="button1" class="navbar-toggle" data-toggle="collapse" data-target="#kkk">
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>
+	        </button>
+	      </div>
+	      <div class="collapse navbar-collapse" id="kkk">
+	        <ul class="nav navbar-nav navbar-right">
+	          <li><a href="#">Skills</a></li>
+	          <li><a href="#">Resume</a></li>
+	          <li><a href="portfolio.html">Portfolio</a></li>
+	          <li><a href="#">Contact Me</a></li>
+	        </ul>
+	      </div>
+	    </div>
+	</nav>
+	<div class="container-fluid">
+	  	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+	    	<ol class="carousel-indicators">
+		      	<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		      	<li data-target="#myCarousel" data-slide-to="1"></li>
+		      	<li data-target="#myCarousel" data-slide-to="2"></li>
+		      	<li data-target="#myCarousel" data-slide-to="3"></li>
+	    	</ol>
+	    	<div class="carousel-inner" role="listbox">
+	      		<div class="item active">
+	        		<img src="DSC_0056.jpg" alt="DSC_0056.jpg" width="100" height="100">
+	      		</div>
+				<div class="item">
+					<img src="DSC_0056.jpg" alt="DSC_0056.jpg" width="100" height="100">
+				</div>
+				<div class="item">
+					<img src="DSC_0056.jpg" alt="DSC_0056.jpg" width="100" height="100">
+				</div>
+				<div class="item">
+					<img src="DSC_0056.jpg" alt="DSC_0056.jpg" width="100" height="100">
+				</div>
+			</div>
+    		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      			<span class="sr-only">Previous</span>
+    		</a>
+    		<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      			<span class="sr-only">Next</span>
+    		</a>
+  		</div>
+	</div>
+	<div class="div2 container-fluid">
+		<div class="row">
+			<div class="col-md-4">
+    			<img id="img2" src="DSC_0056.jpg" alt="Cinque Terre">
+  			</div>
+			<div id="div3" class="col-md-8">
+			<h1 style="color: #ffffff"><i>About Me</i></h1>
+			<p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+	</div>
+	<nav class="navbar navbar-inverse navbar-fixed-bottom">
+    	<div class="container-fluid">
+      		<div class="navbar-footer">
+        		<ul class="ul1 nav navbar-nav">
+          			<li><a href="#"> &#169; 2016 KARTHIK. All Rights Reserved. </a></li>
+          		</ul>
+    			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      				<span class="icon-bar"></span>
+      				<span class="icon-bar"></span>
+      				<span class="icon-bar"></span>
+    			</button>
+    		</div>
+      		<div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav navbar-right">
+			        <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+			        <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+			        <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
+			        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+			        <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+			        <li><a href="#"><i class="fa fa-youtube-square" aria-hidden="true"></i></a></li>
+			        <li><a href="#"><i class="fa fa-flickr" aria-hidden="true"></i></a></li>
+        		</ul>
+      		</div> 
+    	</div>
+  	</nav>
 </body>
 </html>
-
