--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -13,7 +13,8 @@
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
-      <div class="navbar-header">
+    <div class="row">
+      <div class="navbar-header col-md-4 col-md-offset-2">
         <ul class="ul1 nav navbar-nav">
           <li><a id="a1" href="index.html">Karthik Komakula</a></li>
         </ul>
@@ -23,7 +24,7 @@
           <span class="icon-bar"></span>
         </button>
       </div>
-      <div class="collapse navbar-collapse" id="kkk">
+      <div class="collapse navbar-collapse col-md-6" id="kkk">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Skills</a></li>
           <li><a href="#">Resume</a></li>
@@ -31,56 +32,58 @@
           <li><a href="#">Contact Me</a></li>
         </ul>
       </div>
+      </div>
     </div>
   </nav>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-md-4">
+      <div class="col-xs-12 col-md-3 col-md-offset-2">
         <center><img id="img1" class="img-responsive" src="DSC_0056.jpg" alt="Cinque Terre"></center>
       </div>
-      <div id="div2" class="col-xs-12 col-md-8">
-        <h1 style="color: #24c4d7"><i>About Me</i></h1>
-        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div id="top1" class="col-xs-12 col-md-5">
+        <h1 id="hd1"><i>About Me</i></h1>
+        <p class="p1" align="justify"><b>Hi! I am Karthik.</br> I Design delightful interface solutions.</br> I Research, Document, Prototype, Test, Iterate, Design and Deliver.</br> I create Interactive prototypes with HTML, CSS and JavaScript.</b></p>
       </div>
     </div>
   </div>
   <div class="container-fluid">
     <div class="row">
-      <div class="div1 col-md-6">
-        <h1 style="color: #000000"><i>About Me</i></h1>
-        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="div1 col-md-4 col-md-offset-2">
+        <h1 class="hd2"><i>UX Designing</i></h1>
+        <p class="p1" align="justify"><b>User Experience Designer with a passion for designing beautiful and functional user experiences. Minimalist who believe that less is more.</b></p>
       </div>
-      <div class="div1 col-md-6">
-        <h1 style="color: #000000"><i>About Me</i></h1>
-        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="div1 col-md-4">
+        <h1 class="hd2"><i>UI Developing</i></h1>
+        <p class="p1" align="justify"><b>Front End Developer who focuses on writing clean, elegant and efficient code. Love HTML, CSS, JavaScript, Bootstrap and a touch of jQuery.</b></p>
       </div>
     </div>
   </div>
   <div class="container-fluid">
     <div class="row">
-      <div class="div1 col-md-6">
-        <h1 style="color: #000000"><i>About Me</i></h1>
-        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="div1 col-md-4 col-md-offset-2">
+        <h1 class="hd2"><i>Image/ Video Editing</i></h1>
+        <p class="p1" align="justify"><b>Proficient in Graphic Designing and Logo Designing with a flair for creativity and a good eye for colors. And good at video editing and composing visual effects.</b></p>
       </div>
-      <div id="bottom1" class="div1 col-md-6">
-        <h1 style="color: #000000"><i>About Me</i></h1>
-        <p class="p1" align="justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div id="bottom1" class="div1 col-md-4">
+        <h1 class="hd2"><i>Photography</i></h1>
+        <p class="p1" align="justify"><b>I see God's beauty throgh the lens of my camera. When I capture that perfect moment, everything is beautiful! Love acapturing beautiful moments.</b></p>
       </div>
     </div>
   </div>
   <nav class="navbar navbar-inverse navbar-fixed-bottom">
     <div class="container-fluid">
-      <div class="navbar-footer">
+    <div class="row">
+      <div class="navbar-footer col-md-4 col-md-offset-2">
         <ul class="ul1 nav navbar-nav">
-          <li><a href="#"> &#169; 2016 KARTHIK. All Rights Reserved. </a></li>
+          <li><a id="a2" href="#"> &#169; 2016 KARTHIK. All Rights Reserved. </a></li>
         </ul>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <button id="button2" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
       </div> 
-      <div class="collapse navbar-collapse" id="myNavbar">
+      <div class="collapse navbar-collapse col-md-4 col-md-offset-2" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
           <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
@@ -91,6 +94,7 @@
           <li><a href="#"><i class="fa fa-flickr" aria-hidden="true"></i></a></li>
         </ul>
       </div> 
+    </div>
     </div>
   </nav>
 </body>
