--- a/bootstrap/portfolio.html
+++ b/bootstrap/portfolio.html
@@ -4,6 +4,7 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="stylesheet" type="text/css" href="portfolio.css">
@@ -26,11 +27,20 @@
         </button>
       </div>
       <div class="collapse navbar-collapse col-md-6" id="kkk">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Resume</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contact Me</a></li>
+        <ul class="k1 nav navbar-nav navbar-right">
+          <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="skills.html">Skills
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">UX Designing</a></li>
+          <li><a href="#">UI Developing</a></li>
+          <li><a href="#">Image/ Video Editing</a></li>
+          <li><a href="#">Photography</a></li> 
+        </ul>
+      </li>
+          <li><a href="resume.html">Resume</a></li>
+          <li class="active"><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
         </ul>
       </div>
       </div>
@@ -69,13 +79,13 @@
   		</div>
 	</div>
 	<div class="container-fluid">
-    <div class="row">
+    <div class="row port">
       <div class="col-xs-12 col-md-3 col-md-offset-2">
         <center><img class="img1 img-responsive" src="DSC_0056.jpg" alt="Cinque Terre"></center>
       </div>
-      <div id="top1" class="col-xs-12 col-md-5">
+      <div id="top1" class="div2 col-xs-12 col-md-5">
         <h1 id="hd1"><i>About Me</i></h1>
-        <p align="justify"><b>Hi! I am Karthik.</br> I Design delightful interface solutions.</br> I Research, Document, Prototype, Test, Iterate, Design and Deliver.</br> I create Interactive prototypes with HTML, CSS and JavaScript.</b></p>
+        <p align="justify"><b>Hi! I am Karthik.</br> I Design delightful interface solutions.</br> I Research, Document, Prototype, Test, Iterate, Design and Deliver.</br> I create Interactive prototypes with HTML, CSS and JavaScript.</b></br><a href="#" class="read">Read More...</a></p>
       </div>
     </div>
   </div>
@@ -93,7 +103,7 @@
         </button>
       </div> 
       <div class="collapse navbar-collapse col-md-4 col-md-offset-2" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="k2 nav navbar-nav navbar-right">
           <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
           <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
           <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
